2006-01-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* VirtualPathUtilityTest.cs: added new tests.

2005-12-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequestTest.cs: ignore test.

2005-12-06 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpCookieTest.cs: test for setting the Secure property.

2005-11-07  Jason Diamond  <jason@diamond.name>

	* HttpRequestTest.cs: Added new tests.

2005-11-01  Chris Toshok  <toshok@ximian.com>

	* VirtualPathUtilityTest.cs: new tests.

2005-10-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpResponseCas.cs:
	* HttpRequestCas.cs: now that filters are implemented, remove the catch
	for NotImplementedException.

2005-09-29  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpBrowserCapabilitiesCas.cs: Fixed tests case to work with both
	values returned by Mono and MS runtimes.
	* HttpContextCas.cs: Ignore the Application_Deny_UnmanagedCode test 
	case. This check was removed in 2.0 and seems to be inconsistent in
	previous versions (i.e. depends on the execution order which triggers
	the initialization of the HttpRuntime).

2005-09-23  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpContextCas.cs: Mono throws ArgumentNullException for RewritePath
	methods while MS throws NullReferenceException.

2005-09-22  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpCachePolicyCas.cs: SetDiskCacheable method was removed in 2.0 RC

2005-09-21  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpRequestTest.cs: Fixed test cases so they now execute without 
	errors on MS 1.1 SP1, 2.0 RC and Mono (default profile).

2005-09-14  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpWorkerRequestTest.cs: Add test cases for default values of new
	2.0 APIs.

2005-09-13  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpApplicationCas.cs: New. CAS unit tests.
	* HttpApplicationStateCas.cs: New. CAS unit tests.
	* HttpBrowserCapabilitiesCas.cs: New. CAS unit tests.
	* HttpCachePolicyCas.cs: New. CAS unit tests.