@@ -8,6 +8,8 @@ System.Web/HttpRequestTest.cs
 System.Web/HttpResponseTest.cs
 System.Web/HttpServerUtilityTest.cs
 System.Web/HttpUtilityTest.cs
+System.Web/SiteMapProviderTest.cs
+System.Web/StaticSiteMapProviderTest.cs
 System.Web.Compilation/ClientBuildManagerParameterTest.cs
 System.Web.Configuration/AnonymousIdentificationSectionTest.cs
 System.Web.Configuration/AssemblyCollectionTest.cs
