@@ -1,3 +1,9 @@
+2006-03-10  Chris Toshok  <toshok@ximian.com>
+
+	* StaticSiteMapProviderTest.cs: new tests.
+
+	* SiteMapProviderTest.cs: new tests.
+
 2006-01-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* VirtualPathUtilityTest.cs: added new tests.
